tests/snapshots/examples_fixtures/type_system__failing__68_adt_nested_list_non_exhaustive.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/68_adt_nested_list_non_exhaustive.flx
== compile ==
failed (compile)
== diagnostics ==
error[E015]: Non-Exhaustive Match

Match is not exhaustive: 1 missing pattern.

  examples/type_system/failing/68_adt_nested_list_non_exhaustive.flx:9:5
   |
 9 |     match w {
   |     ^^^^^^^^^
10 |         Boxed([]) -> 0,
   | ^^^^^^^^^^^^^^^^^^^^^^^
11 |         Empty -> 0,
   | ^^^^^^^^^^^^^^^^^^^
12 |     }
   | ^^^^^

Hint:
  Add the missing pattern(s) or an unguarded `_ -> ...` catch-all.
== stdout ==
<not executed>
